# toktkn

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release-plz.toml  tiny_shakespeare_5k.json  wikibpe.json  wikibpe50k.json
.github/workflows/: CI.yml  crates.yml  release-plz.yml  test.yaml
bench/: main.rs
benches/: bench.rs
example/: Cargo.toml  tokenizer.json
example/src/: main.rs
src/: bindings.rs  config.rs  lib.rs  preproc.rs  pretrained.rs  tokenizer.rs  util.rs
tests/: test_tokenizer.rs
tests/tok/: helpers.rs  main.rs  serialize.rs  tokenizer.rs
