[package]
name = "toktokenizer"
version = "0.1.1"
edition = "2021"

[lib]
name = "toktokenizer"

[dependencies]
serde_json = "1.0.117"
serde = { version = "1.0", features = ["derive"] }
rustc-hash = "2.1.1"
tqdm = "0.7.0"

[dev-dependencies]
fake = "3.1.0"
rstest = "0.24.0"
tempdir = "0.3.7"
uuid = { version = "1.15.1", features = ["v4"] }
